--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
  </head>
  <body>
-    <h1>Este es un prueba en html</h1>
-    
-    <h1>Este es un prueba 2 en html</h1>
-    <h1>Este es un prueba 3 en html</h1>
+     <h1>este es el inicio de la progrmacion </h1> 
+
+     
  </body>
  </html>
